# ocr

./: .gitignore  conver_to_onnx.py  data_gen.py  finetune.py  generate.py  model.py  t.ipynb  test.py  todo.txt  tokenizer.py  train.py
.github/workflows/: rust.yml
backup/: gptlike.py
data_gen/: .gitignore  Cargo.toml  gen.toml  index.html
data_gen/backup/: crop.rs  diverse.rs  latex.rs  math_hand.rs  text.rs  using_imageproc.rs
data_gen/config/: gen_latex.toml  hand.toml
data_gen/data_collector/: package-lock.json  package.json  t.js  t.ts
data_gen/nodejs/: package-lock.json  test.js  tex2svg.js
data_gen/src/: hand_writer.rs  main.rs  math_node.rs
front_end/: t.html  t.js  test.js
record/: classifier0.py  cnn+transformer.py  rope.py  vit_long.py
