[package]
name = "data_gen"
version = "0.1.0"
edition = "2021"

# [dependencies]
# imageproc = "*"
# rand = "*"
# zip = "*"
# indicatif = "*"
# image = "*"
# ab_glyph = "*"
# clap = { version = "*", features = ["derive"] }
# toml = "*"
# serde = { version = "*", features = ["derive"] }

[dependencies]
rand = "*"
indicatif = "*"
tiny-skia = "*"
resvg = "*"
usvg = "*"

# [dependencies]
# typst = "*"
# typst-svg = "*"