[package]
name = "data_gen"
version = "0.1.0"
edition = "2021"

# text
# [dependencies]
# imageproc = "*"
# rand = "*"
# zip = "*"
# indicatif = "*"
# image = "*"
# ab_glyph = "*"
# clap = { version = "*", features = ["derive"] }
# toml = "*"
# serde = { version = "*", features = ["derive"] }

# math
# [dependencies]
# rand = "*"
# tiny-skia = "*"
# resvg = "*"
# usvg = "*"
# toml = "*"
# serde = { version = "*", features = ["derive"] }
# clap = { version = "*", features = ["derive"] }

# hand writting
[dependencies]
rand = "*"
tiny-skia = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
clap = { version = "*", features = ["derive"] }